<resources>
    <string name="app_name">PersistenceDonnee_BDDMysql</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cr_er">Créer</string>
    <string name="se_connecter">Se connecter</string>
    <string name="localite">Localite</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="recherche">Recherche</string>
    <string name="mettre_jour">Mettre à jour</string>
</resources>